[gd_scene load_steps=33 format=3 uid="uid://cvr2tithgu0ge"]

[ext_resource type="Script" uid="uid://c8nmw1jio27ho" path="res://Entities/Bat/bat.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://catry0kst2q6b" path="res://Entities/Bat/Bat_Sprite_Sheet.png" id="2_md0e3"]
[ext_resource type="Script" uid="uid://5tnkjsec8iip" path="res://Common/AI/ChaseArea.gd" id="2_nlngm"]
[ext_resource type="Script" uid="uid://derfbmyymxqsn" path="res://Common/Hitpoints/HitBox.gd" id="3_4ra3w"]
[ext_resource type="Script" uid="uid://bola3vgr3ssjs" path="res://Common/Hitpoints/HealthTracker.gd" id="4_c4w8v"]
[ext_resource type="Script" uid="uid://chhfim3e62kbb" path="res://Common/Timers/CooldownTimer.gd" id="5_l1f3n"]
[ext_resource type="Script" uid="uid://bds042apw8aqt" path="res://Common/Hitpoints/HurtBox.gd" id="5_xwavj"]
[ext_resource type="Script" uid="uid://bxe5a6rpcmqc1" path="res://Common/AI/AttackTrigger.gd" id="8_g8dmv"]
[ext_resource type="Script" uid="uid://docoslfsmgie7" path="res://Common/State/StateMachine.gd" id="9_k07ai"]
[ext_resource type="Script" uid="uid://dgtd1ywgr8o1h" path="res://Entities/Bat/idle_state.gd" id="10_kdwtr"]
[ext_resource type="Script" uid="uid://oj24yxbufthv" path="res://Entities/Bat/attack_state.gd" id="11_fekb6"]
[ext_resource type="Script" uid="uid://dmie1g6o1g7gr" path="res://Entities/Bat/dead_state.gd" id="11_kdwtr"]
[ext_resource type="Script" uid="uid://c1h5a1m5ky7rk" path="res://Entities/Bat/cooldown_state.gd" id="12_to6qe"]
[ext_resource type="Script" uid="uid://c2w5qelxohvid" path="res://Entities/Bat/chase_state.gd" id="13_oeigv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(984, 164)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 32.0
height = 66.0

[sub_resource type="Animation" id="Animation_4ra3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_5uy6h"]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"apply_damage"
}]
}

[sub_resource type="Animation" id="Animation_c4w8v"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 22)]
}

[sub_resource type="Animation" id="Animation_md0e3"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwavj"]
_data = {
&"RESET": SubResource("Animation_4ra3w"),
&"attack": SubResource("Animation_5uy6h"),
&"death": SubResource("Animation_c4w8v"),
&"idle": SubResource("Animation_md0e3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_md0e3"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_md484"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ipns3"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8qclf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w8i8w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ra3w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5uy6h"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w36fc"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_j0cyh"]
states/attack/node = SubResource("AnimationNodeAnimation_md0e3")
states/attack/position = Vector2(533, 63)
states/death/node = SubResource("AnimationNodeAnimation_md484")
states/death/position = Vector2(583, 245)
states/idle/node = SubResource("AnimationNodeAnimation_ipns3")
states/idle/position = Vector2(455, 169)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_8qclf"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_w8i8w"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_4ra3w"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_5uy6h"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_w36fc")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(64, 164)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3hta0"]
radius = 44.0
height = 138.0

[node name="Bat" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_md0e3")

[node name="ChaseArea" type="Area2D" parent="." node_paths=PackedStringArray("health_tracker")]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_nlngm")
health_tracker = NodePath("../HealthTracker")
metadata/_custom_type_script = "uid://5tnkjsec8iip"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_md0e3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_md0e3")
debug_color = Color(0.8847672, 0.00031458258, 0.8111864, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xwavj")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.4210855e-14, 2.2737368e-13)
scale = Vector2(5, 5)
texture = ExtResource("2_md0e3")
flip_h = true
hframes = 5
vframes = 3

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_j0cyh")
anim_player = NodePath("../AnimationPlayer")

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("3_4ra3w")
metadata/_custom_type_script = "uid://derfbmyymxqsn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-39, 1)
shape = SubResource("RectangleShape2D_4ra3w")

[node name="AttackCooldownTimer" type="Timer" parent="."]
script = ExtResource("5_l1f3n")
metadata/_custom_type_script = "uid://chhfim3e62kbb"

[node name="HealthTracker" type="Node" parent="."]
script = ExtResource("4_c4w8v")
metadata/_custom_type_script = "uid://bola3vgr3ssjs"

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_tracker")]
collision_layer = 2
collision_mask = 0
script = ExtResource("5_xwavj")
health_tracker = NodePath("../HealthTracker")
metadata/_custom_type_script = "uid://bds042apw8aqt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_3hta0")

[node name="AttackTrigger" type="Node" parent="." node_paths=PackedStringArray("hit_box")]
script = ExtResource("8_g8dmv")
hit_box = NodePath("../HitBox")
metadata/_custom_type_script = "uid://bxe5a6rpcmqc1"

[node name="DownRaycast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 54)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("9_k07ai")
metadata/_custom_type_script = "uid://docoslfsmgie7"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("10_kdwtr")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("11_fekb6")

[node name="CooldownState" type="Node" parent="StateMachine"]
script = ExtResource("12_to6qe")

[node name="ChaseState" type="Node" parent="StateMachine"]
script = ExtResource("13_oeigv")

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource("11_kdwtr")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="AttackCooldownTimer" to="StateMachine/CooldownState" method="_on_attack_cooldown_timer_timeout"]
[connection signal="die" from="HealthTracker" to="." method="_on_health_tracker_die"]
[connection signal="hitpoints_changed" from="HealthTracker" to="." method="_on_health_tracker_hitpoints_changed"]
[connection signal="attack_started" from="AttackTrigger" to="." method="_on_attack_trigger_attack_started"]
[connection signal="attack_stopped" from="AttackTrigger" to="." method="_on_attack_trigger_attack_stopped"]
